import("//build/slice.gni")

slice("iceslice") {
  sources = [
    "Ice/BuiltinSequences.ice",
    "Ice/Communicator.ice",
    "Ice/CommunicatorF.ice",
    "Ice/Connection.ice",
    "Ice/ConnectionF.ice",
    "Ice/Current.ice",
    "Ice/Endpoint.ice",
    "Ice/EndpointF.ice",
    "Ice/EndpointTypes.ice",
    "Ice/FacetMap.ice",
    "Ice/Identity.ice",
    "Ice/ImplicitContext.ice",
    "Ice/ImplicitContextF.ice",
    "Ice/Instrumentation.ice",
    "Ice/InstrumentationF.ice",
    "Ice/LocalException.ice",
    "Ice/Locator.ice",
    "Ice/LocatorF.ice",
    "Ice/Logger.ice",
    "Ice/LoggerF.ice",
    "Ice/Metrics.ice",
    "Ice/ObjectAdapter.ice",
    "Ice/ObjectAdapterF.ice",
    "Ice/ObjectFactory.ice",
    "Ice/Plugin.ice",
    "Ice/PluginF.ice",
    "Ice/Process.ice",
    "Ice/ProcessF.ice",
    "Ice/Properties.ice",
    "Ice/PropertiesAdmin.ice",
    "Ice/PropertiesF.ice",
    "Ice/RemoteLogger.ice",
    "Ice/Router.ice",
    "Ice/RouterF.ice",
    "Ice/ServantLocator.ice",
    "Ice/ServantLocatorF.ice",
    "Ice/SliceChecksumDict.ice",
    "Ice/ValueFactory.ice",
    "Ice/Version.ice",
  ]
  include_dirs = [ "." ]
}
